objects/TransObj12__c.object
<CustomObject>
    <fields>
        <fullName>field12__c</fullName>
        <label>field1</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field13__c</fullName>
        <description>f3</description>
        <label>field3</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field66__c</fullName>
        <label>field66</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>TransObj1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TransObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TransObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>